Cleaning warning things

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <build>
   	<sourceDirectory>src</sourceDirectory>
   	<testSourceDirectory>test</testSourceDirectory>
-  	<pluginManagement>
+  	<plugins>
   	<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -16,9 +16,10 @@
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
+          <compilerArgument>-O</compilerArgument>
         </configuration>
       </plugin>
-  	</pluginManagement>
+  	</plugins>
   		  
   </build>
 </project>
