--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.usc.citius</groupId>
 	<artifactId>frog</artifactId>
-	<version>0.1</version>
+	<version>0.6</version>
 	<name>FROG</name>
 	<description>Fuzzy Rules of Greatness</description>
+	<dependencies>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
