--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.usc.citius</groupId>
 	<artifactId>frog</artifactId>
-	<version>0.6</version>
+	<version>0.7</version>
 	<name>FROG</name>
 	<description>Fuzzy Rules of Greatness</description>
 	<dependencies>
@@ -12,6 +12,12 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.15</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
